# gourmap

./: Makefile.am  configure.ac
data/: Makefile.am  poi.db
po/: POTFILES.in  en.po
src/: .gitignore  Makefile.am  google-map-template.h  gourmap-coord.c  gourmap-coord.h  gourmap-main.c  gourmap-poi.c  gourmap-poi.h  gourmap-ui.c  gourmap-ui.h  gourmap-util.c  gourmap-util.h
src/data/: Makefile.am  poi.db
